Hide conference on xs devices to prevent ugly wrapping

--- a/src/static/scss/base/_misc.scss
+++ b/src/static/scss/base/_misc.scss
@@ -2,6 +2,7 @@ $pad: .75rem;
 
 $container-width: 70rem;
 
+$breakpoint-xs: 24rem;
 $breakpoint-sm: 36rem;
 $breakpoint-md: 48rem;
 $breakpoint-lg: $container-width + 1rem; // full width + 1rem
